Create initial entity models

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -3,17 +3,18 @@
 help:
 	@echo 'Usage: make [command]'
 	@echo 'Commands:'
-	@echo '  env          Create a virtual development environment for Python.'
-	@echo '  install      Install dependencies into virtualenv.'
-	@echo '  migrate      Sync the database for the first time.'
-	@echo '  run          Start the django server.'
-	@echo '  flake8       Check code style using flake8.'
-	@echo '  pylint       Check code style using pylint.'
-	@echo '  test         Run tests.'
-	@echo '  build        Build a distribution package with setuptools.'
-	@echo '  clean        Remove all Python, test and build artifacts.'
-	@echo '  clean-build  Remove build artifacts.'
-	@echo '  clean-pyc    Remove Python file artifacts.'
+	@echo '  env              Create a virtual development environment for Python.'
+	@echo '  install          Install dependencies into virtualenv.'
+	@echo '  migrate          Sync the database for the first time.'
+	@echo '  makemigrations   Create new migrations based on the changes detected to your models.'
+	@echo '  run              Start the django server.'
+	@echo '  flake8           Check code style using flake8.'
+	@echo '  pylint           Check code style using pylint.'
+	@echo '  test             Run tests.'
+	@echo '  build            Build a distribution package with setuptools.'
+	@echo '  clean            Remove all Python, test and build artifacts.'
+	@echo '  clean-build      Remove build artifacts.'
+	@echo '  clean-pyc        Remove Python file artifacts.'
 
 build:
 	python setup.py egg_info sdist bdist_wheel
@@ -49,13 +50,16 @@ flake8:
 
 pylint:
 	. .env/bin/activate
-	pylint api app --disable=missing-docstring,too-few-public-methods,too-many-ancestors
+	pylint api app --load-plugins pylint_django --disable=missing-docstring,too-few-public-methods,too-many-ancestors
 
 test:
-	# TODO
+	. .env/bin/activate && python manage.py test
 
 run:
 	. .env/bin/activate && python manage.py runserver
 
 migrate:
 	. .env/bin/activate && python manage.py migrate
+
+makemigrations:
+	. .env/bin/activate && python manage.py makemigrations
